<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/newQuestionForum"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/NewQuestionTextView"
            android:id="@+id/newQuestionCreation"
            android:text="@string/newQuestionCreation" />

        <TextView
            style="@style/NewQuestionTextView"
            android:id="@+id/lessonNewQuestion"
            android:text="@string/algevra"
            android:paddingBottom="@dimen/list_forum_textView_padding_down"
            android:layout_below="@+id/newQuestionCreation" />

        <TextView
            style="@style/NewQuestionTextView"
            android:layout_below="@+id/newQuestionCreation"
            android:layout_toRightOf="@+id/lessonNewQuestion"
            android:id="@+id/derectionNewQuestion"
            android:paddingBottom="@dimen/list_forum_textView_padding_down"
            android:text="@string/thirdYearAnthropistikon" />

        <TextView
            style="@style/NewQuestionTextView"
            android:layout_alignParentRight="true"
            android:id="@+id/yearClassNewQuestion"
            android:text="@string/category_robotic" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_question_subject_hint"
            android:background="@color/browser_actions_bg_grey"
            android:padding="@dimen/new_question_editText_letter_padding"
            android:textColor="@color/colorPrimary"
            android:id="@+id/subjectArea"
            android:textStyle="bold"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_question_editText"
        android:layout_weight="1"
        android:visibility="gone"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/questions"
        android:layout_height="@dimen/new_question_editText"
        android:layout_weight="1"
        android:inputType="text|textMultiLine|textCapSentences"
        android:focusable="true"
        android:imeOptions="actionDone"
        android:background="@color/white"
        android:padding="@dimen/new_question_editText_letter_padding"
        android:gravity="start" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:gravity="center_horizontal">

        <android.support.v7.widget.AppCompatButton
            style="@style/NewQuestionButtons"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/rejectBtn"
            android:id="@+id/rejectBtn"/>

        <ImageButton
            android:id="@+id/photoPickerButton1"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/new_question_button"
            android:layout_width="@dimen/image_selection"
            android:layout_height="@dimen/image_selection"
            android:background="@android:drawable/ic_menu_gallery" />


        <android.support.v7.widget.AppCompatButton
            style="@style/NewQuestionButtons"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/submitBtn"
            android:id="@+id/submitBtn"/>

    </RelativeLayout>

</LinearLayout>