<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subject_settings"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:fontFamily="@font/avenirnext_medium"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="@string/notification_description" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sub"
        android:layout_below="@+id/subject_settings">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:id="@+id/subBTtn"
            android:textAllCaps="false"
            android:text="@string/subscribe"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/avenirnext_medium"
            android:backgroundTint="@color/subBtn"
            android:textColor="@color/white"
            android:layout_marginEnd="@dimen/list_forum_margin" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:id="@+id/unSubBtn"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:text="@string/unsubscribe"
            android:fontFamily="@font/avenirnext_medium"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:visibility="invisible"
            android:layout_marginEnd="@dimen/list_forum_margin" />

    </RelativeLayout>

</LinearLayout>