<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forum"
    android:background="@color/white"
    tools:context="christos.voutselas.aporianet.NewQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/info"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/yearClass"
                android:id="@+id/backBtn"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="@dimen/list_forum_margin"
                android:background="@color/colorPrimary"
                android:src="@drawable/back3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/list_forum_linearlout_layout_width"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lesson"
                android:text="@string/algevra"
                android:fontFamily="@font/avenirnext_medium"
                android:paddingLeft="@dimen/list_forum_textView_padding_left"
                android:paddingTop="@dimen/list_forum_textView_padding_up"
                android:textColor="@color/cardview_dark_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/derection"
                android:layout_toRightOf="@+id/lesson"
                android:text="@string/thirdYearAnthropistikon"
                android:paddingLeft="@dimen/list_forum_textView_padding_left"
                android:paddingTop="@dimen/list_forum_textView_padding_up"
                android:textColor="@color/cardview_dark_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yearClass"
                android:text="@string/category_robotic"
                android:layout_below="@+id/lesson"
                android:paddingLeft="@dimen/list_forum_textView_padding_left"
                android:paddingTop="@dimen/list_forum_textView_padding_up"
                android:paddingBottom="@dimen/list_forum_textView_padding_down"
                android:textColor="@color/cardview_dark_background"/>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/newQuestionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/yearClass"
            android:layout_centerHorizontal="true"
            app:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/avenirnext_medium"
            android:text="@string/newQuestion"
            android:textColor="@color/white"
            android:layout_marginEnd="@dimen/list_forum_margin"
            android:padding="@dimen/new_question_button"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sub"
        android:layout_below="@+id/info">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:id="@+id/subBTtn"
            android:textAllCaps="false"
            android:text="@string/subscribe"
            android:fontFamily="@font/avenirnext_medium"
            android:backgroundTint="@color/subBtn"
            android:textColor="@color/white"
            android:layout_marginEnd="@dimen/list_forum_margin" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:id="@+id/unSubBtn"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:text="@string/unsubscribe"
            android:fontFamily="@font/avenirnext_medium"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:visibility="invisible"
            android:layout_marginEnd="@dimen/list_forum_margin" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:id="@+id/view"
        android:layout_below="@+id/sub"
        android:layout_height="@dimen/list_forum_view_layout_height"
        android:layout_marginLeft="@dimen/list_forum_margin"
        android:layout_marginRight="@dimen/list_forum_margin"
        android:background="@color/cardview_dark_background" />

    <ListView
        android:id="@+id/listViewAs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view"
        android:background="@color/white"
        tools:listitem="@layout/item_message"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        android:focusable="true"
        android:clickable="true" />

</RelativeLayout>